Created reference AddressMapperTest